--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,9 @@ button {
   padding: 5px 10px;
   margin-left: 5px;
   cursor: pointer;
+  width: 70px;
+  margin-bottom: 5px;
+  text-align: center;
 }
 input, select {
   padding: 5px;
