--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -23,3 +23,10 @@
   padding: 5px;
   background-color: white;
 }
+
+.navbar a.active {
+  color: #8BC34A;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: white;
+}
